# talent-plan

courses/rust/projects/my-porject-1/: Cargo.toml
courses/rust/projects/my-porject-1/src/: error.rs  kv.rs  lib.rs  storages.rs
courses/rust/projects/my-porject-1/tests/: tests.rs
